# CorsaConnect

./: .gitignore  README.md  index.html
android/: build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/corsaconnect/: Gauges.kt  Haptics.kt  Layout.kt  MainActivity.kt  NetworkService.kt  Protocol.kt  SteeringSensor.kt
android/app/src/main/res/values/: themes.xml
server/: Cargo.toml
server/.cargo/: config.toml
server/examples/: test_client.rs
server/src/: gui.rs  main.rs  motionsim.rs  outgauge.rs  protocol.rs  scstelemetry.rs  server.rs
tools/: make_icons.py
