[package]
name = "corsaconnect-server"
version = "0.2.4"
edition = "2021"
description = "CorsaConnect PC server: virtual gamepad + BeamNG telemetry relay"

[[bin]]
name = "CorsaConnect"
path = "src/main.rs"

[dependencies]
vigem-client = "0.1"
eframe = "0.29"
image = { version = "0.25", default-features = false, features = ["png"] }

[[example]]
name = "test_client"
path = "examples/test_client.rs"

[profile.release]
opt-level = 3
lto = true
